<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollV"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    android:background="@color/extra">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/extra"
        tools:context=".detail.FilmActivity">


        <ImageView
            android:id="@+id/posterGrande"
            android:layout_width="0dp"
            android:layout_height="280dp"
            android:adjustViewBounds="true"
            android:alpha="0.5"
            android:scaleType="fitXY"
            app:layout_constraintDimensionRatio="w,"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@drawable/fondo"
            tools:visibility="visible" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/posterGrande">

            <TextView
                android:id="@+id/titulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="serif"
                tools:text="@string/titulo"
                android:textColor="@color/blanco"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="@+id/tags"
                app:layout_constraintTop_toBottomOf="@+id/tags" />

            <ImageView
                android:id="@+id/poster"
                android:layout_width="100dp"
                android:layout_height="160dp"
                android:layout_marginStart="16dp"
                android:adjustViewBounds="true"
                android:background="#000000"
                android:padding="1dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@drawable/portadados" />

            <TextView
                android:id="@+id/tags"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="32dp"
                android:fontFamily="sans-serif-smallcaps"
                tools:text="@string/tags"
                android:textColor="@color/primario"
                app:layout_constraintStart_toEndOf="@+id/poster"
                app:layout_constraintTop_toTopOf="parent" />

            <android.widget.Button
                android:id="@+id/pg"
                android:layout_width="45dp"
                android:layout_height="20dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/botonrojo"
                android:fontFamily="sans-serif-black"
                android:textColor="@color/rojo"
                android:textSize="10sp"
                app:layout_constraintStart_toEndOf="@+id/director"
                app:layout_constraintTop_toBottomOf="@+id/titulo"
                tools:text="PG +18" />

            <android.widget.Button
                android:id="@+id/cc"
                android:layout_width="30dp"
                android:layout_height="20dp"
                android:layout_marginStart="20dp"
                android:background="@drawable/botonpg"
                android:fontFamily="sans-serif-black"
                android:textColor="@color/grisClaro"
                android:textSize="10sp"
                app:layout_constraintStart_toEndOf="@+id/pg"
                app:layout_constraintTop_toTopOf="@+id/pg"
                tools:text="CC" />

            <RatingBar
                android:id="@+id/ratingBar"
                style="@style/Widget.AppCompat.RatingBar.Small"
                android:layout_width="82dp"
                android:layout_height="21dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="88dp"
                android:isIndicator="true"
                android:numStars="5"
                android:scaleX="0.5"
                android:scaleY="0.5"
                android:stepSize="1"
                android:theme="@style/RatingBar"
                app:layout_constraintEnd_toEndOf="@+id/cc"
                app:layout_constraintStart_toStartOf="@+id/titulo"
                app:layout_constraintTop_toBottomOf="@+id/pg" />

            <TextView
                android:id="@+id/director"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:textColor="#FFFFFF"
                android:textSize="10sp"
                app:layout_constraintStart_toStartOf="@+id/titulo"
                app:layout_constraintTop_toTopOf="@+id/pg"
                tools:text="Jhon Smithz" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/descAndButtons"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
            app:layout_constraintVertical_bias="0.0">

            <TextView
                android:id="@+id/descripcionTexto"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:maxLines="7"
                android:textColor="@color/grisClaro"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/descripcion" />


            <android.widget.Button
                android:id="@+id/rentBoton"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:background="@drawable/botonamarillo"
                android:textColor="@color/amarillo"
                app:layout_constraintEnd_toEndOf="@+id/descripcionTexto"
                app:layout_constraintTop_toTopOf="@+id/trailerBoton"
                tools:text="@string/rent" />

            <android.widget.Button
                android:id="@+id/trailerBoton"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:background="@color/amarillo"
                app:layout_constraintStart_toStartOf="@+id/descripcionTexto"
                app:layout_constraintTop_toBottomOf="@+id/descripcionTexto"
                tools:text="@string/buy" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>